--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@
 body{
     display:grid;
     grid-template-columns: 15% 85%;
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 6% 94%;
     background-color: var(--cor-de-fundo);
     padding: 2vw;
     justify-content: center;
     row-gap: 2vh;
     column-gap: 2vh;
 }
+
+
 
 
 
@@ -62,21 +64,109 @@ aside{
 
     p{
         color: var(--branca);
-        font-weight: 700;
+        font-weight: 500;
+        font-size: 20px;
+    }
+}
+#aside-segundo-container{
+    height: 55vh;
+    width: 10vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.aside-container-img_texto2{
+    display: flex;
+    align-items: left;
+
+    img{
+        height: 2.5vh;
+        margin-right: 15px;
+    }
+
+    p{
+        color: var(--branca);
+        font-weight: 500;
         font-size: 20px;
     }
 }
 
 
 
+
+
 header{
     grid-column: 2/3;
+    grid-row: 1/2;
+
+    display:grid;
+    grid-template-columns: 20% 50% 27% 3%;
+    grid-template-rows: 100%;
+    align-items: start;
+
+    input{
+        width: 450px;
+        border: none;
+        text-align: right;
+        padding: 1.5vh 2vw;
+        border-radius: 50px;
+        font-size: 1rem;
+        box-shadow: 0px 0px 10px rgb(236, 236, 236);
+    }
+}
+.header-container{
+    display: flex;
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.header-sub-container{
+    display: flex;
+
+    p{
+        width: 100px;
+    }
+}
+.perfil-img{
+    height: 50px;
+    filter: drop-shadow(0px 0px 5px rgb(180, 180, 180));
+    margin-right: 1vw;
+}
+.notification-icon{
+    height: 30px;
+    grid-column: 4/5;
     grid-row: 1/2;
 }
 
 
 
+
+
+.section-container-one{
+    background-color: var(--lilas-claro);
+    color: var(--branca);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 20px;
+
+    h2{
+        font-size: 2rem;
+        font-weight: 500;
+    }
+}
+.div-container-one{
+    margin: 5vh;
+    display: flex;
+    flex-direction: column;
+    gap: 7vh;
+}
+
+
+
+
+
 main{
-    grid-column: 2/3;
+    grid-column: 2/4;
     grid-row: 2/3;
 }
