--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ aside{
     justify-content: space-between;
     padding: 5vh;
     border-radius: 20px;
+    height: 100%;
 }
 #graduation{
     padding: 2vh;
@@ -46,16 +47,17 @@ aside{
     background-color: var(--lilas-escuro);
 }
 #aside-primeiro-container{
-    height: 55vh;
-    width: 10vw;
+
 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 6vh;
 }
 .aside-container-img_texto{
     display: flex;
     align-items: center;
+    width: 10vw;
 
     img{
         height: 2.5vh;
@@ -65,12 +67,11 @@ aside{
     p{
         color: var(--branca);
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
     }
 }
 #aside-segundo-container{
-    height: 55vh;
-    width: 10vw;
+
 
     display: flex;
     flex-direction: column;
@@ -79,6 +80,7 @@ aside{
 .aside-container-img_texto2{
     display: flex;
     align-items: left;
+    width: 10vw;
 
     img{
         height: 2.5vh;
@@ -88,7 +90,7 @@ aside{
     p{
         color: var(--branca);
         font-weight: 500;
-        font-size: 20px;
+        font-size: 16px;
     }
 }
 
@@ -107,12 +109,13 @@ header{
 
     input{
         width: 450px;
+        outline: none;
         border: none;
         text-align: right;
         padding: 1.5vh 2vw;
         border-radius: 50px;
         font-size: 1rem;
-        box-shadow: 0px 0px 10px rgb(236, 236, 236);
+        box-shadow: 0px 0px 50px rgb(224, 224, 224);
     }
 }
 .header-container{
@@ -169,4 +172,122 @@ header{
 main{
     grid-column: 2/4;
     grid-row: 2/3;
+}
+.main2-container{
+    display: grid;
+    grid-template-columns: 65% 37%;
+    grid-template-rows: 30% 20% 50%;
+    column-gap: 2vh;
+    row-gap: 2vh;
+}
+
+
+
+
+
+.finance-container{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-between;
+    padding: 1vh;
+    font-size: 18px;
+}
+.divs-finance{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.divs-finance div{
+    background-color: var(--branca);
+    height: 27vh;
+    width: 27vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 0px 0px 50px rgb(224, 224, 224);
+}
+
+
+
+
+
+.courses-container{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    display: flex;
+    flex-direction: column;
+    padding: 1vh;
+    font-size: 18px;
+}
+.courses-title{
+    display: flex;
+    justify-content: space-between;
+}
+.courses-content{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1vh;
+    div{
+        background-color: rgb(215, 197, 243);
+        padding: 1.5vh;
+        border-radius: 20px;
+        width:45%;
+
+        display: flex;
+        flex-direction: row;
+        div{
+            display: flex;
+            flex-direction: column;
+            gap: 3vh;
+            p{
+                color: var(--lilas-claro);
+                font-weight: 600;
+                font-size: 19px;
+            }
+            button{
+                background-color: var(--lilas-claro);
+                color: var(--branca);
+                font-size: 18px;
+                font-weight: 500;
+                width: 130px;
+                padding: 0.5vh;
+                border: none;
+                border-radius: 50px;
+            }
+        }
+        img{
+            height: 120px;
+        }
+    }
+}
+.imagem1{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+.imagem2{
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+
+
+
+.instructors-container{
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+}
+
+
+
+
+.ignore{
+    color: var(--lilas-claro);
 }
