--- a/style.css
+++ b/style.css
@@ -40,6 +40,16 @@ aside{
     padding: 5vh;
     border-radius: 20px;
     height: 100%;
+    div{
+        div{
+            p{
+                cursor: pointer;
+            }
+            img{
+                cursor: pointer;
+            }
+        }
+    }
 }
 #graduation{
     padding: 2vh;
@@ -134,11 +144,13 @@ header{
     height: 50px;
     filter: drop-shadow(0px 0px 5px rgb(180, 180, 180));
     margin-right: 1vw;
+    cursor: pointer;
 }
 .notification-icon{
     height: 30px;
     grid-column: 4/5;
     grid-row: 1/2;
+    cursor: pointer;
 }
 
 
@@ -180,7 +192,7 @@ main{
     grid-template-rows: 30% 20% 50%;
     column-gap: 2vh;
     row-gap: 2vh;
-    height: 57vh;
+    height: 55vh;
 }
 
 
@@ -215,6 +227,13 @@ main{
     align-items: center;
     border-radius: 20px;
     box-shadow: 0px 0px 50px rgb(224, 224, 224);
+    cursor: pointer;
+}
+.divs-finance div:hover{
+    border: 6px solid var(--lilas-claro);
+    transform: scale(1.1);
+    transition: 0.3s;
+    box-shadow: 0px 0px 30px rgb(151, 151, 151);
 }
 
 
@@ -267,12 +286,26 @@ main{
                 padding: 0.5vh;
                 border: none;
                 border-radius: 50px;
+                cursor: pointer;
             }
         }
         img{
             height: 120px;
         }
     }
+    #courses10:hover{
+        border: 6px solid var(--lilas-claro);
+        transform: scale(1.1);
+        transition: 0.3s;
+        box-shadow: 0px 0px 30px rgb(151, 151, 151);
+    }
+}
+
+.button-container{
+    display: flex;
+    width: 250px;
+    justify-content: start;
+    margin-left: 1.3vw;
 }
 
 
@@ -289,14 +322,27 @@ main{
     padding: 1vh;
     font-size: 18px;
     justify-content: space-between;
-    
+
+    div{
+        h3{
+            margin-left: 0.3vw;
+        }
+        img{
+            cursor: pointer;
+        }
+        img:hover{
+            transform: scale(1.1);
+            transition: 0.3s;
+            filter: drop-shadow(0px 0px 30px rgb(151, 151, 151));
+        }
+    }
 
     div + div{
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
         img{
-            height: 11vh;
+            height: 10vh;
             margin-top: 2vh;
             margin-right: 1vw;
         }
@@ -306,14 +352,46 @@ main{
 
 .inform-container{
     grid-column: 2/3;
-    grid-row: 2/3;
-    div{
+    grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
+    article{
         display: flex;
         justify-content: space-between;
         h3{
-            
+            font-size: 21px;
+            margin-left: 1.8vh;
+        }
+        h3 + h3{
+            margin-right: 2vw;
+            color: var(--lilas-claro);
         }
     }
+}
+.center-container{
+    display: flex;
+    margin: 2vh auto;
+    margin-left: 0.6vw;
+}
+.center-container-2{
+    background-color: var(--branca);
+    box-shadow: 0px 0px 50px rgb(224, 224, 224);
+    border-radius: 20px;
+    padding: 3vh;
+    width: 18vw;
+    div + div{
+        h4{
+            margin-top: 2vh;
+        }
+    }
+}
+
+h4{
+    font-size: 18px;
+}
+h6{
+    font-size: 16px;
+    color: var(--lilas-claro);
 }
 
 
@@ -323,4 +401,5 @@ main{
 
 .ignore{
     color: var(--lilas-claro);
+    cursor: pointer;
 }
